flowdirD8ltd update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,12 @@ exportMethods("[", "[[", "!", "%in%", activeCat, "activeCat<-", "add<-", addCats
 
 ## EC 20210702 ecor
 exportMethods(watershed, pitfinder, NIDP, flowAccumulation)
-## EC 20250606 ecor
+## END EC 20210702 ecor
+## EC 20240413 ecor
+exportMethods(flowdirD8ltd)
+## END EC 20240413 ecor
+
+
 ###exportMethods(watershed2,pitfinder2,NIDP2,flowAccu2,flowAccu2_weight)
 ## END EC 
 
