--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: terra
 Type: Package
 Title: Spatial Data Analysis
-Version: 1.8-73
-Date: 2025-10-06
-Depends: R (>= 3.5.0)
-Suggests: parallel, tinytest, ncdf4, sf (>= 0.9-8), deldir, XML, leaflet (>= 2.2.1), htmlwidgets,stringr,calculus
+Version: 1.8-74
+Date: 2025-10-17
+Depends: R (>= 3.5.0), methods
+Suggests: parallel, tinytest, ncdf4, sf (>= 0.9-8), deldir, XML, leaflet (>= 2.2.1), htmlwidgets,calculus
 LinkingTo: Rcpp
-Imports: methods, Rcpp (>= 1.0-10)
+Imports: Rcpp (>= 1.0-10)
 SystemRequirements: C++17, GDAL (>= 2.2.3), GEOS (>= 3.4.0), PROJ (>= 4.9.3), TBB, sqlite3 
 Encoding: UTF-8
 Language: en-US
